--- a/assets/scss/_custom.scss
+++ b/assets/scss/_custom.scss
@@ -583,7 +583,7 @@ footer {
 
       overflow-y: auto;
       border: 2px solid transparent;
-      order-color: transparent $teal-700 $teal-700 $teal-700;
+      border-color: transparent $teal-700 $teal-700 $teal-700;
       transition: all 1.5s ease-in-out;
       @include media-breakpoint-down(sm) {
         grid-template-columns: repeat(1, 1fr);
