--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,8 +6,7 @@
           <div class="row">
             <div class="col-12 d-flex flex-wrap align-items-center justify-content-start">
               <p class="mb-md-0 pe-xl-5 pe-3 ">A project by</p>
-              <img class="pe-xl-5 pe-3" src="/img/svg/footer-logo2.svg" alt="footer logo">
-              <img src="/img/svg/footer-logo1.svg" alt="footer logo">
+              <img src="/img/svg/footer-logo1.svg" alt="Hermes logo">
             </div>
           </div>
         </div>
