--- a/layouts/results/single.html
+++ b/layouts/results/single.html
@@ -439,8 +439,7 @@ function getStatusClass(status) {
     }
 }
 
-//***** Dynamical table ******//
-//****************************//
+//***** Dynamic table ******//
 
 function createDynamicTables(data) {
     // Get the reference for the table bodies
