--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,7 @@
 {{ $options := (dict "targetPath" "main.css" "outputStyle" "compressed" "enableSourceMap" true) }}
 {{ $style := resources.Get "scss/main.scss" | resources.ToCSS $options }}
 {{ if hugo.IsProduction }}
-{{ $style = $style | resources.PostCSS | resources.Fingerprint "sha256" }}
+{{ $style = $style | resources.Fingerprint "sha256" }}
 {{ end }}
 <link rel="stylesheet" href="{{ $style.RelPermalink }}" />
 
